[package]
name = "QuantumComputing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blas = "*"
blas-src = { version = "*", features = ["openblas"] }
openblas-src = {version = "0.10", features = ["system", "static"]}
num-complex = "*"

[[example]]
name = "example1"
path = "examples/example1.rs"