[package]
name = "QuantumComputing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cblas = "*"
openblas-src = {git="https://github.com/blas-lapack-rs/openblas-src", features = ["system", "static"]}
num-complex = "*"

[[example]]
name = "example1"
path = "examples/example1.rs"